# reliquary

./: .gitignore  Cargo.toml  patch.py
protos/: protos.proto
reliquary-proc-macro/src/: lib.rs
src/: command_id.rs  crypto.rs  kcp.rs  lib.rs
src/network/: connection.rs  crypto.rs  kcp.rs  mod.rs
src/resource/: excel.rs  mod.rs  text_map.rs
