[workspace]
members = ["reliquary-proc-macro"]
exclude = ["reliquary-codegen"]

[package]
name = "reliquary"
version = "2.0.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
etherparse = "0.15.0"
kcp = "0.5.3"
protobuf = "~3.4.0"
rand_mt = "4.2.2"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
tracing = "0.1.40"
reliquary-proc-macro = { path = "reliquary-proc-macro" }
